syntax = "proto3";

package peony.hal;

import "google/protobuf/empty.proto";

service TtyService {
  rpc Write(TtyRequest) returns (google.protobuf.Empty) {}
  rpc Read(google.protobuf.Empty) returns (TtyResponse) {}
}

service AudioService {
  rpc Play(AudioPlayRequest) returns (google.protobuf.Empty) {}
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

service GpioService {
  rpc LedSet(LedSetRequest) returns (google.protobuf.Empty) {}
  rpc LedGet(LedGetRequest) returns (LedGetResponse) {}
  rpc ButtonReport(google.protobuf.Empty) returns (ButtonResponse) {}
}

message TtyRequest { repeated string commands = 1; }
message TtyResponse {
  string type = 1;
  string payload = 2;
}

message AudioPlayRequest {
  message File {
    enum Type {
      wav = 0;
      mp3 = 1;
    }
    Type type = 1;
    bytes payload = 2;
  }
  repeated File files = 1;
  int32 loop = 2;
  int32 delay = 3;
}

message LedSetRequest {
  int32 id = 1;
  bool on = 2;
}

message LedGetRequest { int32 id = 1; }
message LedGetResponse { bool on = 2; }

message ButtonResponse {
  enum Type {
    single = 0;
    double = 1;
    long = 2;
  }
  int32 id = 1;
  Type type = 2;
}
